--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,48 @@
 /* место для вашего кода */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 92px 49px;
+}
+
+.header__menu {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 32px;
+    
+}
+
+.header__links-list-item {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.header__links-list-item .header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    display: block;
+    width: 200px;
+}
+
+.header__logo-image {
+    width: 100%;
+}
+
+.cover {
+    padding: 96px 0 180px;
+}
+
+.lots {
+    padding: 180px 50px 181px;
+}
+
+.about {
+    padding: 181px 50px 180px;
+}
+
+footer {}
