--- a/styles/style.css
+++ b/styles/style.css
@@ -1,48 +1,364 @@
 /* место для вашего кода */
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 92px 49px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    padding: 92px 49px 92px 51px;
+    align-items: center;
 }
 
 .header__menu {
     display: flex;
-    flex-direction: row;
-    list-style: none;
-    gap: 32px;
-    
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-underline-offset: 5px;
 }
 
-.header__links-list-item {
-  display: flex;
-  flex-direction: column;
-  
+.header__menu-list {
+    display: flex;
+    list-style: circle;
+    column-gap: 33px;
 }
 
-.header__links-list-item .header__link_active {
+.header__link {
+    text-decoration: underline;
+}
+
+.header__link_active {
     text-decoration: none;
+    list-style-type: none;
 }
 
 .header__logo {
     display: block;
-    width: 200px;
+    width: 138px;
 }
 
 .header__logo-image {
     width: 100%;
 }
 
+.address {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px; /* 135% */
+    text-underline-offset: 4px;
+}
+
 .cover {
-    padding: 96px 0 180px;
+    position: relative;
+    background-image: url('../images/cover.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1;
+    height: 757px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.6;
+    z-index: 0;
+}
+
+.cover__title {
+    display: grid;
+    padding: 165px 50px 0;
+    gap: 20px;
+}
+
+.aligned-text {
+    color: #FFF;
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+    z-index: 0;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.6em;
+}
+
+.aligned-text_center {
+    text-align: center;
+    line-height: 1;
+}
+
+
+.aligned-text_right {
+    text-align: right;
+    line-height: 1;
+    letter-spacing: 0.6em;
+}
+
+.right-letter-spacing {
+    letter-spacing: 0.3em;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.cover__description {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    padding-right: 50px ;
+    z-index: 1;
+    text-transform: uppercase;
+    padding-top: 132px;
+    
+}
+
+.cover__description-text {
+    display: flex;
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 127.273% */
+    text-transform: uppercase;
+    word-spacing: 18px;
+    padding-right: 78px;
+}
+
+.bet-button {
+    border: 1px solid #FFF;
+    background-color: transparent;
+    color: #FFF;
+    padding: 12px 32px;
+    text-align: center;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
 }
 
 .lots {
-    padding: 180px 50px 181px;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    margin: 180px 50px 0;
+    position: relative;
+}
+  
+.lots__heading {
+    color: #000;
+    font-family: Raleway, sans-serif;
+    padding: 0 0 26px 40px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+  
+.lots__card-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    gap: 25px;
+}
+  
+.lots__card-list-item {
+    color: #fff;
+    list-style-type: none;
+    position: relative;
+    width: 430px;
+    flex-grow: 1;
+}
+  
+.card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-height: 450px;
+    line-height: 1px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: space-between;
+}
+  
+.card-link {
+    text-decoration: none;
+}
+  
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+}
+  
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+  
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+}
+  
+.card__title {
+    color: #fff;
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    padding: 50px 40px 30px;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 3px;
+    z-index: 1;
+}
+  
+.card__text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    padding: 0 40px 50px;
+    z-index: 1;
+}
+  
+.lots__look-more-link {
+    display: block;
+    color: #000;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 24px */
+    text-decoration: underline;
+    padding-top: 32px;
+    padding-left: 40px;
+    text-underline-position: under;
+    background-color: transparent;
+    text-decoration-thickness: 1px;
 }
 
 .about {
-    padding: 181px 50px 180px;
+    display: grid;
+    grid-template-columns: 430px 1fr;
+    height: 487px;
+    margin: 180px 50px 0;
+    gap: 25px;
 }
 
-footer {}
+.about__column {
+    display: flex;
+    flex-direction: column;
+}
+
+.about__logo {
+    display: flex;
+    background-color: #000;
+    max-width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    margin: 0 95px 0;
+    align-items: center;
+    justify-content: center;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    display: flex;
+    color: #000;
+    font-family: Raleway;
+    font-size: 40px;
+    font-weight: 700;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+    padding: 100px 0;
+}
+
+.about__text{
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.about__text{
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.about__text:last-child{
+    color: #000;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding-top: 25px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 180px 50px 90px;
+}
+
+.footer__menu {
+    text-align: center;
+    color: #000;
+    font-family: Raleway;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-underline-offset: 5px;
+}
+
+.footer__links-list-item {
+    list-style-type: none;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+}
+
+.footer__social-list-item{
+    display: flex;
+    list-style-type: none;
+    gap: 48px;
+}
+
+.footer__social-icon-image {
+    width: 100%;
+    height: 48px;
+}
