--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 body {
   min-width: 1100px;
   margin: 0;
-  font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
+  font-family: 'Raleway';
 }
 
 h1,
