--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 .header__menu {
     display: flex;
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -27,9 +27,12 @@
     text-decoration: underline;
 }
 
+.header__links-list-item_no-bullit {
+    list-style-type: none;
+}
+
 .header__link_active {
     text-decoration: none;
-    list-style-type: none;
 }
 
 .header__logo {
@@ -47,7 +50,7 @@
     flex-wrap: wrap;
     align-content: flex-end;
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -61,11 +64,12 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: -1;
-    height: 757px;
+    z-index: 1;
+    min-height: 757px;
 }
 
-.overlay {
+.cover::before {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
@@ -130,7 +134,7 @@
 .cover__description-text {
     display: flex;
     color: #FFF;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -146,7 +150,7 @@
     color: #FFF;
     padding: 12px 32px;
     text-align: center;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
@@ -164,7 +168,7 @@
   
 .lots__heading {
     color: #000;
-    font-family: Raleway, sans-serif;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     padding: 0 0 26px 40px;
     font-size: 40px;
     font-weight: 700;
@@ -178,7 +182,7 @@
     padding: 0;
     gap: 25px;
 }
-  
+
 .lots__card-list-item {
     color: #fff;
     list-style-type: none;
@@ -186,7 +190,19 @@
     width: 430px;
     flex-grow: 1;
 }
-  
+
+.lots__card-list-item::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.6;
+    z-index: 0;
+}
+
 .card {
     display: flex;
     flex-direction: column;
@@ -217,7 +233,7 @@
   
 .card__title {
     color: #fff;
-    font-family: Raleway, sans-serif;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 22px;
     font-style: normal;
     font-weight: 700;
@@ -241,7 +257,7 @@
 .lots__look-more-link {
     display: block;
     color: #000;
-    font-family: Raleway, sans-serif;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -286,7 +302,7 @@
 .about__title {
     display: flex;
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 40px;
     font-weight: 700;
     font-style: normal;
@@ -297,7 +313,7 @@
 
 .about__text {
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -306,7 +322,7 @@
 
 .about__text:last-child {
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
@@ -323,7 +339,7 @@
 .footer__menu {
     text-align: center;
     color: #000;
-    font-family: Raleway;
+    font-family: 'Raleway', 'Arial', 'Helvetica', sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -337,10 +353,6 @@
 
 .footer__menu-link_active {
     text-decoration: none;
-}
-
-.footer__social-list {
-    display: flex;
 }
 
 .footer__social-list-item {
